--- a/project1.css
+++ b/project1.css
@@ -6,7 +6,7 @@
     font-family: "Roboto", sans-serif;
 }
 body{
-background-color: whitesmoke;
+background-color: white;
 }
 .main{
     width: 100%;
