--- a/project1.css
+++ b/project1.css
@@ -19,9 +19,9 @@ background-color: white;
     width:35rem ;
     height: 15rem;
     padding: 10px;
-    border-radius: 5%;
+    border-radius: 30px;
     font-size: 40px;
-    background-color:whitesmoke;
+    background-color:rgb(251, 245, 245);
     text-align: center;
 }
 button{
@@ -29,7 +29,7 @@ button{
     display: block;
     font-size: 45px;
     width: 100%;
-    border-radius: 20px;
+    border-radius: 40px;
     background-color: aqua;
    
 }
