--- a/project1.css
+++ b/project1.css
@@ -6,7 +6,7 @@
     font-family: "Roboto", sans-serif;
 }
 body{
-background-color: white;
+background-color: rgb(248, 225, 225);
 }
 .main{
     width: 100%;
